--- a/client/src/components/layouts/Sidebar.module.css
+++ b/client/src/components/layouts/Sidebar.module.css
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
-  width: 60pxs;
+  height: 100dvh;
+  width: auto;
   z-index: 10;
 }
 
